fixing dark mode on 2 & 4 and overlapping footer
too much padding

--- a/styles.css
+++ b/styles.css
@@ -37,11 +37,11 @@ header, footer {
 }
 
 footer {
-  position: fixed;
+  position: relative;
   bottom: 0;
   width: 100%;
-  z-index: 5;
-  padding: 0.5rem;
+  z-index: 0;
+  padding: 1rem 0 30px 0;
 }
 
 footer p {
@@ -183,7 +183,7 @@ footer img {
 
 .contact-button-container {
   text-align: center;
-  margin: 1.25rem 0 5px;
+  margin: 1.25rem 0 30px;
   position: relative;
   z-index: 10;
 }
@@ -256,6 +256,13 @@ footer img {
 
 .nav-button:hover {
   background-color: #0056b3;
+}
+
+nav.pagination-nav {
+  text-align: center;
+  margin-bottom: 20px;
+  position: relative;
+  z-index: 1;
 }
 
 .download-btn:focus,
@@ -342,10 +349,4 @@ body.dark-mode footer {
 }
 
 body.dark-mode .gif-item img {
-  box-shadow: none !important;
-}
-
-body.dark-mode .download-btn,
-body.dark-mode #contactMeButton,
-body.dark-mode #toggleDarkMode,
-body.dark-mode #follow
+  box-shadow:
